# basic_rest_api

./: .env.sample  Cargo.toml  Dockerfile
src/: config.rs  errors.rs  handlers.rs  main.rs  models.rs
