[package]
name = "basic_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
config = "0.13"
log = "0.4"
env_logger = "0.9"
